# inf_search

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
config/: config.yaml
lingvistica/stemmer/: CMakeLists.txt  stemmer.cpp  stemmer.hpp  stop_words.txt  test_stemmer.cpp
lingvistica/tokenizer/: CMakeLists.txt  test_tokenizer.cpp  tokenizer.cpp  tokenizer.hpp
search_engine/: CMakeLists.txt  hashmap.hpp  indexer.cpp  indexer.hpp  main.cpp  search_engine.cpp  search_engine.hpp  vector.hpp
search_robot/: crawler.py  database.py  main.py  parser.py
utils/: export_data.py
zipf_analysis/: analize.py  py_inf_search.cpp  setup.py  zipf_analyze.py
